infra/k8s/manifests/lgtm.yaml
apiVersion: v1
kind: Service
metadata:
  name: monolith-lgtm
spec:
  type: ClusterIP
  selector:
    app: monolith-lgtm
  ports:
    - name: lgtm-port
      port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolith-lgtm
spec:
  selector:
    matchLabels:
      app: monolith-lgtm
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: monolith-lgtm
    spec:
      containers:
        - name: lgtm
          image: grafana/otel-lgtm:0.28.0
          ports:
            - containerPort: 3000
