infra/k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monolith-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - backend:
              - service:
                  name: keycloak
                  port:
                    number: 7080
            path: /auth
            pathType: Prefix
          - backend:
              service:
                name: monolith-api
                port:
                  number: 8080
            path: /
            pathType: Prefix
